fix: fixes wrong positioning

--- a/src/styles/components/settings.scss
+++ b/src/styles/components/settings.scss
@@ -41,7 +41,7 @@
       width: 100%;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: start;
       position: relative;
       margin-bottom: 1rem;
       padding: 0.5rem 1rem;
